style.css
@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');

*{
    box-sizing: border-box;
}

body{
    background-color: #f6f7fb;
    font-family: 'Muli', 'sans-serif';
    display: flex;
    align-items:center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

.container{
    text-align: center;
}

.progress-container{
    display: flex;
    justify-content: space-between;
    /* space-between spaces out numbers inside the container */
    position: relative;
    margin-bottom: 30px;
    max-width: 100%;
    width: 350px;
}

.progress{
    background-color: palevioletred;
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    height: 4px;
    width: 0%;
    z-index: -1;
    transition: .4s ease;
}

.progress-container::before{
    content: '';
    background-color: #e0e0e0;
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    height: 4px;
    width: 100%;
    z-index: -1;
}

.circle{
    background-color: #fff;;
    color: #999;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    display: 

}

